
 * src/plugindata.h, src/plugins.c, plugins/geanyfunctions.h:
   Add sci_get_lexer() to plugin API.
 * plugins/htmlchars.c:
   Only automatically replace characters when the current document is
   a Markup document.
 * plugins/htmlchars.c:
   Rename submenu item labels to be more descriptive.
 * src/keybindings.c:
   Fix Alt+[0-9] switching tabs when other modifiers are also held.


2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/main.c:
   Remove trailing directory separator for app->datadir and
   app->docdir for consistency with the other directory fields.
 * src/filetypes.c:
   Detect user and system filetype configuration files as Conf
   filetype.
 * src/editor.c:
   Respect 'Smart' home key for Shift+Home (fixes #3100290).


2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * data/filetypes.ada:
   Fix comments for Ada. Thanks to Jonas Baggett for reporting.


2010-10-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * Makefile.am:
   Add install-data-only target to only install data/* to speed up
   testing.
 * src/editor.c:
   Fix not autocompleting when breaking lines.
 * data/filetypes.java, data/filetypes.cpp, data/filetypes.vala,
   data/colorschemes/alt.conf, data/filetypes.haxe,
   data/filetypes.common, data/filetypes.glsl,
   data/filetypes.actionscript, data/filetypes.cs,
   data/filetypes.ferite, data/filetypes.c, data/filetypes.javascript,
   data/filetypes.Genie.conf:
   Add named style 'extra', use for C-like filetypes.


2010-10-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetypes.xml:
   Match data-* and aria-* as HTML attributes.
 * data/colorschemes/alt.conf, data/filetypes.common,
   data/filetypes.python:
   Make Python use named styles for color scheme support - use
   alt.conf color scheme if you want the old colors.
   Add named style 'function'.
 * src/plugindata.h:
   Move plugin_set_info prototype and parenthesize arguments for