@@ -9,6 +9,9 @@
    Rename submenu item labels to be more descriptive.
  * src/keybindings.c:
    Fix Alt+[0-9] switching tabs when other modifiers are also held.
+ * src/ui_utils.c:
+   Don't allow pasting of numbers followed by other characters in the
+   Go to Line dialog/field (patch by Dimitar Zhekov, thanks).
 
 
 2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
